--- a/quartoTest.qmd
+++ b/quartoTest.qmd
@@ -10,18 +10,29 @@ Instead of using the iris dataset. Let's use the Penquin dataset available in th
 library(palmerpenguins)
 library(tidyverse)
 
+print(Sys.getenv("RETICULATE_PYTHON"))
 penguins |> ggplot(aes(bill_length_mm,flipper_length_mm)) + geom_point()
 ojs_define(penguins = penguins)
 ```
 
+```{python}
+#import pandas as pd
+#penguins_py = r.penguins
+#pd.DataFrame(penguins_py)
+```
+
 ## Look at the data in obervablejs
+
 the penquins data is available in observalblejs
+
 ```{ojs}
 penguins
 ```
 
 ### Remake the plot
-**Note:** if you want to create an ojs object, you must surround them with parenthesis.  Just an observable thing.
+
+**Note:** if you want to create an ojs object, you must surround them with parenthesis. Just an observable thing.
+
 ```{ojs}
 plotly=require("https://cdn.plot.ly/plotly-2.25.2.min.js")
 data = [{
@@ -41,4 +52,15 @@ layout = ({
 })
 myPlot = DOM.element('div')
 plotly.newPlot(myPlot, data, layout);
+```
+
+```{r}
+twoTimes <- function(x){
+  2*x
+}
+```
+
+```{r}
+x=c(1,2,3,4)
+twoTimes(x)
 ```
